[project]
name = "pyrenew-hew"
version = "0.1.0"
description = "Models for forecasting COVID-19 and Flu hospitalizations using multiple data sources with PyRenew"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Damon Bayer", email = "xum8@cdc.gov"},
  {name = "Dylan H. Morris"},
  {name = "Subekshya Bidari"},
]

dependencies = [
    "pyrenew",
    "polars>=1.36",
    "jax<0.8.2",
    "scipy",
    "numpy",
    "numpyro",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  {include-group = "test"}
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
pyrenew = { git = "https://github.com/CDCgov/PyRenew", rev = "v0.1.6" }
