[project]
name = "pyrenew-multisignal"
version = "0.1.0"
description = "Models for forecasting respiratory disease hospitalizations using multiple data sources with PyRenew"
readme = "README.md"
authors = [
    { name = "sbidari", email = "zib2@cdc.gov" },
    {name = "Damon Bayer", email = "xum8@cdc.gov"},
    {name = "Dylan H. Morris"},
]
requires-python = ">=3.13"
dependencies = [
    "pyrenew",
    "polars>=1.36",
    "jax",
    "scipy",
    "numpy",
    "numpyro",
]

[dependency-groups]
dev = [
  {include-group = "test"}
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyrenew = { git = "https://github.com/CDCgov/PyRenew", rev = "v0.1.6" }
